# red-pitaya-devices

./: README.md  generate-eclipse-project.sh  load-fpga-image.sh
src/: CMakeLists.txt
src/lightning-trigger/: CMakeLists.txt  lightning-trigger.cpp  lightning-trigger.hpp  main.cpp
src/trigger-recorder/: CMakeLists.txt  main.cpp  rp-trigger-recorder.conf  trigger-recorder-launcher.sh  trigger-recorder.cpp  trigger-recorder.hpp  trigger-recorder.service
